--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bethesda Data Science Meetup</title>
+    <title>Bethesda Data Science</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,6 +58,7 @@
             <h1>Bethesda Data Science Meetup</h1>
         </div>
     </header>
+    <!--
     <nav>
         <div class="container">
             <a href="#">Home</a>
@@ -66,14 +67,16 @@
             <a href="#">Contact</a>
         </div>
     </nav>
+    -->
     <div class="container content-section">
         <h2>About Us</h2>
-        <p>Welcome to the Bethesda Data Science Meetup! We are a group of data science enthusiasts who meet regularly to discuss the latest trends in data science, share knowledge, and network with like-minded individuals. Whether you're a professional data scientist, a student, or simply interested in learning more about data science, you're welcome to join us!</p>
+        <p>Welcome to Bethesda Data Science! We are a group of data science enthusiasts who meet regularly to discuss the latest trends in data science, share knowledge, and network with like-minded individuals. Whether you're a professional data scientist, a student, or simply interested in learning more about data science, you're welcome to join us!</p>
     </div>
     <div class="container content-section">
         <h2>Upcoming Events</h2>
-        <p>Stay tuned for information on our next meetup!</p>
+        See our upcoming events on the <a href=https://www.meetup.com/bethesda-data-science-networking-meetup/>meetup page</a>.        
     </div>
+<!--
     <div class="container content-section">
         <h2>Past Events</h2>
         <ul>
@@ -90,8 +93,9 @@
             <button type="submit">Send</button>
         </form>
     </div>
+-->
     <div class="footer">
-        <p>© 2024 Bethesda Data Science Meetup</p>
+        <p>© 2024 Bethesda Data Science</p>
     </div>
 </body>
 </html>
