--- a/index.html
+++ b/index.html
@@ -73,10 +73,16 @@
         <p>Welcome to Bethesda Data Science! We are a group of data science enthusiasts who meet regularly to discuss the latest trends in data science, share knowledge, and network with like-minded individuals. Whether you're a professional data scientist, a student, or simply interested in learning more about data science, you're welcome to join us!</p>
     </div>
     <div class="container content-section">
+        <h2>Become a speaker</h2>
+        Want to be featured at our next event? Tell us about yourself by <a href=https://forms.gle/uJZ3PCzSCrUDWAVP6>clicking here</a>.
+    </div>
+    <div class="container content-section">
         <h2>Upcoming Events</h2>
         See our upcoming events on the <a href=https://www.meetup.com/bethesda-data-science-networking-meetup/>meetup page</a>.        
     </div>
-<!--
+
+    
+    <!--
     <div class="container content-section">
         <h2>Past Events</h2>
         <ul>
