--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         Want to be featured at our next event? Tell us about yourself by <a href=https://forms.gle/uJZ3PCzSCrUDWAVP6>clicking here</a>.
     </div>
     <div class="container content-section">
+        <h2>Become a volunteer</h2>
+        Want to help develop Bethesda Data Science? Tell us about yourself by <a href=https://forms.gle/bmvuQqj7vCGqJqyv6>clicking here</a>.
+    </div>
+    <div class="container content-section">
         <h2>Upcoming Events</h2>
         See our upcoming events on the <a href=https://www.meetup.com/bethesda-data-science-networking-meetup/>meetup page</a>.        
     </div>
